clusters/pibox/apps/rauthy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rauthy
  namespace: rauthy
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: rauthy
  template:
    metadata:
      labels:
        app: rauthy
    spec:
      securityContext:
        fsGroup: 10001
      containers:
        - name: rauthy
          image: ghcr.io/sebadob/rauthy:0.37.1@sha256:72b4734a7c52bd67cd544e7b72a4ab64932a7060844ef475fc2bb3d3da3074d9
          securityContext:
            runAsUser: 10001
            runAsGroup: 10001
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              memory: 256Mi
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 8200
              name: ready
          livenessProbe:
            httpGet:
              path: /auth/v1/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 2
          readinessProbe:
            httpGet:
              path: /ready
              port: 8200
            initialDelaySeconds: 5
            periodSeconds: 3
            failureThreshold: 2
          volumeMounts:
            - name: rauthy-data
              mountPath: /app/data
            - name: rauthy-config
              mountPath: /app/config.toml
              readOnly: true
              subPath: config.toml
      volumes:
        - name: rauthy-data
          persistentVolumeClaim:
            claimName: rauthy-data
        - name: rauthy-config
          configMap:
            name: rauthy-config
