clusters/pibox/apps/rauthy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rauthy-http
  namespace: rauthy
spec:
  selector:
    app: rauthy
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
