clusters/pibox/apps/rauthy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-global-fail2ban@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: rauthy-ingress
  namespace: rauthy
spec:
  ingressClassName: my-traefik
  rules:
    - host: sso.paas.lsedlar.cz
      http:
        paths:
          - backend:
              service:
                name: rauthy-http
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - sso.paas.lsedlar.cz
      secretName: rauthy-cert
